# talha_chatbot_rag

talha_chatbot_rag/: app.py  ingest.py  main.py  pyproject.toml  requirements.txt
talha_chatbot_rag/data/: projects.md
talha_chatbot_rag/faiss_index/: index.faiss  index.pkl
talha_chatbot_rag/index/: index.faiss  index.pkl
